# golem-x

./: .gitignore  ARCHITECTURE  Cargo.toml  Makefile.toml  README.md  REQUIREMENTS.md  api-definition.json  api_calls.sh  docker-compose.yaml  update_components.sh
.github/workflows/: ci.yml
router/: Cargo.toml
router/src/: lib.rs
router/wit/: router.wit
timeline-management/: Cargo.toml
timeline-management-stub/: Cargo.toml
timeline-management-stub/src/: lib.rs
timeline-management/src/: lib.rs
timeline-management/wit/: timeline-management.wit
timeline_management/: Cargo.toml
timeline_management/src/: lib.rs
timeline_management/wit/: timeline_management.wit
tweet-management/: Cargo.toml
tweet-management-stub/: Cargo.toml
tweet-management-stub/src/: lib.rs
tweet-management/src/: lib.rs
tweet-management/wit/: tweet-management.wit
tweet_management/: Cargo.toml
tweet_management/src/: lib.rs
tweet_management/wit/: tweet_management.wit
user-management/: Cargo.toml
user-management-stub/: Cargo.toml
user-management-stub/src/: lib.rs
user-management/src/: lib.rs
user-management/wit/: user-management.wit
user_management/: Cargo.toml
user_management/src/: lib.rs
user_management/wit/: user_management.wit
worker_management/: Cargo.toml
worker_management/src/: lib.rs
worker_management/wit/: worker_management.wit
