[package]
name = "tweet-management-stub"
version = "0.0.1"
edition = "2021"

[package.metadata.component]
package = "component:tweet-management"

[package.metadata.component.target]
world = "wasm-rpc-stub-tweet-management"
path = "wit"

[package.metadata.component.target.dependencies."component:tweet-management"]
path = "wit/deps/component_tweet-management"

[package.metadata.component.target.dependencies."golem:rpc"]
path = "wit/deps/wasm-rpc"

[package.metadata.component.target.dependencies."wasi:io"]
path = "wit/deps/io"

[dependencies.golem-wasm-rpc]
version = "1.0.1"
features = ["stub"]
default-features = false

[dependencies.wit-bindgen-rt]
version = "0.26.0"
features = ["bitflags"]

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
required-features = []

[profile.release]
opt-level = "s"
lto = true
strip = true
