[package]
name = "tweet-management"
version = "0.1.0"
edition = "2021"

[dependencies]
wit-bindgen-rt = { version = "0.30.0", features = ["bitflags"] }
chrono = "~0.4.26"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:tweet-management"

[package.metadata.component.dependencies]
